<resources>
    <string name="app_name">FeelCycle</string>
    <!--登录-->
    <string name="phone_login">手机登录</string>
    <!-- Regist-->
    <string name="regist_name">注册账号</string>
    <string name="regist_button">手机号注册</string>
    <string name="regist_tip">注册即代表同意</string>
    <string name="regist_service">服务条款</string>
    <string name="regist_and">和</string>
    <string name="regist_secrt">隐私条款</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="personal_information">个人资料</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
