<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.silence.feelcycle.entrance.RegistActivity"
    android:orientation="vertical">
    <!--logo显示-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="130dp">
        <com.silence.feelcycle.utils.CircleImageView
            android:id="@+id/regist_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/logo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteY="114dp"
        tools:layout_editor_absoluteX="0dp">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_name" />
    </LinearLayout>

<LinearLayout
    android:layout_marginTop="50dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    tools:layout_editor_absoluteY="199dp"
    tools:layout_editor_absoluteX="0dp">
    <Button
        android:id="@+id/bt_phone_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regist_button"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="216dp" />
</LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="308dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_tip"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="158dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_service"
            tools:layout_editor_absoluteX="75dp"
            tools:layout_editor_absoluteY="139dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/regist_and"
            tools:layout_editor_absoluteX="125dp"
            tools:layout_editor_absoluteY="128dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_secrt"
            tools:layout_editor_absoluteX="206dp"
            tools:layout_editor_absoluteY="139dp" />

    </LinearLayout>

</LinearLayout>
